fixed wrap display of close button

--- a/index.css
+++ b/index.css
@@ -103,6 +103,8 @@ hr {
     padding: 3px 4px;
     background: none;
     border: 2px solid transparent;
+    display: flex;
+    flex-wrap: nowrap;
 }
 .leads-group:hover, .active-btn {
     border-bottom: 2px solid #5f9341;
